@@ -117,6 +117,15 @@ def help(__version__,opt=""):
     CTRL+q                           ─> # To exit.
     CTRL+s                           ─> # To save.
 """
+
+#
+  rm_c="""
+  --rm, rm, delete                   ─> # To delete files and folders.
+  Usage: --rm [-f/-d] [FILE/DIR_PATH]
+  Mandatory arguments to long options:
+    --rm -f [FILE_PATH]              ─> # Delete a file.
+    --rm -d [DIR_PATH]               ─> # Delete a folder.
+"""
   #
   ABOUT="""
 [ABOUT]
@@ -126,7 +135,7 @@ def help(__version__,opt=""):
   --about, about                     ─> # About this project.
   --version, version                 ─> # Get the version number you are working with."""
   if opt=="":
-    return header+OPTIONS+ACTIONS+ls_c+spsbar+cat_c+spsbar+set_c+spsbar+cd_c+spsbar+rf_c+spsbar+up_c+spsbar+down_c+spsbar+zip_c+spsbar+edt_c+spsbar+ABOUT
+    return header+OPTIONS+ACTIONS+ls_c+spsbar+cat_c+spsbar+set_c+spsbar+cd_c+spsbar+rf_c+spsbar+up_c+spsbar+down_c+spsbar+zip_c+spsbar+edt_c+spsbar+rm_c+spsbar+ABOUT
   else:
     opt=opt.replace("--","")
     opt=opt+"_c"
